Add parts endpoint
